Center align all content Issue #11

--- a/src/app/home/components/JoinGame.module.css
+++ b/src/app/home/components/JoinGame.module.css
@@ -1,5 +1,6 @@
 .joinGameContainer {
-  width: 360px;
+  width: 50dvw;
+  margin: auto;
 }
 
 .title {
@@ -14,7 +15,7 @@
   box-shadow: 2px 2px 15px 2px rgb(189, 189, 189);
   padding: 30px;
   width: 300px;
-  text-align: center;
+  margin: auto;
 }
 
 .gameNameInput {
